Fix Nav css/spacing

--- a/app/assets/stylesheets/api/navbar.scss
+++ b/app/assets/stylesheets/api/navbar.scss
@@ -1,7 +1,6 @@
 .navbar {
   position: relative;
   display: flex;
-
   -webkit-box-direction: normal;
   -webkit-box-orient: vertical;
   background: #fff;
@@ -17,22 +16,23 @@
   width: 100%;
   z-index: 100;
   margin-left: 20px;
-
 }
 
 .header-login-signup-links {
   padding-top: 5px;
   color: #777;
-  font-size: 14px;
+  font-size: 11px;
 }
 
 .logout-button {
-  margin: 20px;
+  margin: 0 10px;
+  font-size: 11px;
 }
 
 .header-logged-in-links {
   padding-top: 5px;
   color: #777;
+  font-size: 11px;
 }
 
 .brand-icon {
